# EasyHeatTransfer2D

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  imgui.ini  main.cpp
Data/: Job-1.inp  fem_data.txt  fem_data3.txt  fem_data_4x4_q.txt  fem_data_ref.txt  fem_data_tr.txt  mes_siatka.inp
example_meshes/: dwuteownik_42x80.txt  ex_1.txt  fem_data_32x32_tr.txt  info
src/: main_window.cpp  main_window.h  progress_bar.cpp  progress_bar.h  saving_data.cpp  saving_data.h
src/app_ui/: grid.cpp  grid.h
src/gauss/: gauss.cpp
src/material_info/: load_materials.cpp  load_materials.h
src/mes/: mes.cpp  mes.h
src/mesh/: afm.cpp  afm.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h
src/solver/: cholesky_ldl.cpp  cholesky_ldl.h  gauss.cpp  gauss.h
src/visual/: visualisation.cpp  visualisation.h
